Update README about binary line docs format and add useful `localconstants.py` overrides section